fix for bug 240986 "XPCOM sample fails to start inside xpcshell" r=bsmedberg,dougt